--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -307,7 +307,7 @@ h2{
 
 
 
-/*-----------Crear/ver movimiento----------*/
+/*-----------crear movimiento----------*/
 
 .main-container-crear{
     width: 100%;
@@ -318,6 +318,55 @@ h2{
 }
 
 .section-crearMovimiento{
+    color: white;
+    background:rgba(5,7,12,0.40);
+    outline: none;
+    display: flex;
+    flex-direction: row;
+    border-radius: 10px;
+    width: 1000px;
+    height: 688px;
+    margin: auto;
+    align-items: center;
+}
+
+
+.crearMovimiento{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    outline: none;
+    border-radius: 10px;
+    padding: 5px;
+    margin: auto;
+}
+
+
+
+
+.btn-primary{
+    width: 100%;
+    margin-top: 10px;
+}
+
+.textoCrear{
+    margin-bottom: 30px;
+    font-size: 60px;
+}
+
+
+/*-----------ver movimiento----------*/
+
+.main-container-ver{
+    width: 100%;
+    height: 79vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-verMovimiento{
     color: white;
     background:rgba(5,7,12,0.40);
     outline: none;
@@ -338,8 +387,6 @@ h2{
 
 }
 
-
-
 /*---------Footer----------*/
 
 footer{
@@ -349,3 +396,5 @@ footer{
     background:rgba(5,7,12,0.40);
     color: white;
  }
+
+
