--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -153,14 +153,16 @@ h2{
     display: flex;
     flex-direction: row;
     border-radius: 10px;
-    width: 1700px;
-    height: 688px;
+    width: 90%;
+    height: 74%;
     margin: auto;
     align-items: center;
 }
 
 .imagen-inicio{
     margin-left: 80px;
+    max-width: 100%;
+    max-height: 100%;
     height: 500px;
     border-radius: 15px;
 }
